// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders as expected with the given props (descending sort) 1`] = `
<Header>
  <Row
    modifiers="fields"
  >
    <HeaderCell
      onClick={[Function]}
    >
      Name
       
      <DownArrow />
    </HeaderCell>
    <HeaderCell
      onClick={[Function]}
    >
      Age
       
    </HeaderCell>
    <HeaderCell>
      Act
    </HeaderCell>
  </Row>
  <Row
    modifiers="sorter"
  >
    <HeaderCell
      colSpan={3}
    >
      Sort by: 
      <br />
      <Select
        onChange={[Function]}
        options={
          Array [
            Object {
              "key": "name",
              "text": "Name",
              "value": "name",
            },
          ]
        }
        placeholder="Select field"
        value="name"
      />
       
      <Select
        onChange={[Function]}
        options={
          Array [
            Object {
              "key": "DESCENDING",
              "text": "descending",
              "value": "descending",
            },
            Object {
              "key": "ASCENDING",
              "text": "ascending",
              "value": "ascending",
            },
          ]
        }
        placeholder="Select direction"
        value="descending"
      />
    </HeaderCell>
  </Row>
</Header>
`;

exports[`Header renders as expected with the given props 1`] = `
<Header>
  <Row
    modifiers="fields"
  >
    <HeaderCell
      onClick={[Function]}
    >
      Name
       
      <UpArrow />
    </HeaderCell>
    <HeaderCell
      onClick={[Function]}
    >
      Age
       
    </HeaderCell>
    <HeaderCell>
      Act
    </HeaderCell>
  </Row>
  <Row
    modifiers="sorter"
  >
    <HeaderCell
      colSpan={3}
    >
      Sort by: 
      <br />
      <Select
        onChange={[Function]}
        options={
          Array [
            Object {
              "key": "name",
              "text": "Name",
              "value": "name",
            },
          ]
        }
        placeholder="Select field"
        value="name"
      />
       
      <Select
        onChange={[Function]}
        options={
          Array [
            Object {
              "key": "DESCENDING",
              "text": "descending",
              "value": "descending",
            },
            Object {
              "key": "ASCENDING",
              "text": "ascending",
              "value": "ascending",
            },
          ]
        }
        placeholder="Select direction"
        value="ascending"
      />
    </HeaderCell>
  </Row>
</Header>
`;
